@@ -140,14 +140,7 @@ else
 					<div class="header-search pull-right">
 						<?php
 						// Display position-0 modules
-						$this->searchmodules = JModuleHelper::getModules('position-0');
-						foreach ($this->searchmodules as $searchmodule)
-						{
-							$output = JModuleHelper::renderModule($searchmodule, array('style' => 'none'));
-							$params = new JRegistry;
-							$params->loadString($searchmodule->params);
-							echo $output;
-						}
+						echo $doc->getBuffer('modules', 'position-0', array('style' => 'none'));
 						?>
 					</div>
 				</div>
@@ -155,19 +148,12 @@ else
 			<div class="navigation">
 				<?php
 				// Display position-1 modules
-				$this->navmodules = JModuleHelper::getModules('position-1');
-				foreach ($this->navmodules as $navmodule)
-				{
-					$output = JModuleHelper::renderModule($navmodule, array('style' => 'none'));
-					$params = new JRegistry;
-					$params->loadString($navmodule->params);
-					echo $output;
-				}
+				echo $doc->getBuffer('modules', 'position-1', array('style' => 'none'));
 				?>
 			</div>
 			<!-- Banner -->
 			<div class="banner">
-				<jdoc:include type="modules" name="banner" style="xhtml" />
+				<?php echo $doc->getBuffer('modules', 'banner', array('style' => 'xhtml')); ?>
 			</div>
 			<div class="row-fluid">
 				<div id="content" class="span12">
@@ -189,10 +175,7 @@ else
 								<?php if (JModuleHelper::getModule('search')) : ?>
 									<p><strong><?php echo JText::_('JERROR_LAYOUT_SEARCH'); ?></strong></p>
 									<p><?php echo JText::_('JERROR_LAYOUT_SEARCH_PAGE'); ?></p>
-									<?php
-										$module = JModuleHelper::getModule('search');
-										echo JModuleHelper::renderModule($module);
-									?>
+									<?php echo $doc->getBuffer('module', 'search'); ?>
 								<?php endif; ?>
 								<p><?php echo JText::_('JERROR_LAYOUT_GO_TO_THE_HOME_PAGE'); ?></p>
 								<p><a href="<?php echo $this->baseurl; ?>/index.php" class="btn"><i class="icon-home"></i> <?php echo JText::_('JERROR_LAYOUT_HOME_PAGE'); ?></a></p>
@@ -213,11 +196,12 @@ else
 	<div class="footer">
 		<div class="container<?php echo ($params->get('fluidContainer') ? '-fluid' : '');?>">
 			<hr />
-			<jdoc:include type="modules" name="footer" style="none" />
+			<?php echo $doc->getBuffer('modules', 'footer', array('style' => 'none')); ?>
+			
 			<p class="pull-right"><a href="#top" id="back-top"><?php echo JText::_('TPL_PROTOSTAR_BACKTOTOP'); ?></a></p>
 			<p>&copy; <?php echo $sitename; ?> <?php echo date('Y');?></p>
 		</div>
 	</div>
-	<jdoc:include type="modules" name="debug" style="none" />
+	<?php echo $doc->getBuffer('modules', 'debug', array('style' => 'none')); ?>
 </body>
 </html>
