@@ -33,6 +33,7 @@ $ -> Language fix or change
  $ Updating installation lang files: bg-BG, es-ES, zh-CN, zh-TW
  # [#31348] Regression for plugin filter search with spaces in the title. Reverting
  # [#31345] Correct typo in deprecated logging. Thanks Brian Teeman
+ # [#31230] Protostar error.php shows <jdoc /> tags. Thanks Piotr Cz
 
 05-Jul-2013 Jean-Marie Simonet
  $ Updating installation lang files: af-ZA, be-BY, ca-ES, da-DK, de-DE, he-IL, hr-HR, hu-HU, pl-PL
